[package]
name = "mikan_loader"
version = "0.1.0"
authors = ["segfo <k.segfo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { git = "https://github.com/rust-osdev/uefi-rs.git" }
rlibc = "1.0.0"
common = {path="../common"}
xmas-elf = "0.7.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"