[package]
name = "mikan_loader"
version = "0.1.0"
authors = ["segfo <k.segfo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { version="0.9.0" }
uefi-services = "0.6.0" 
rlibc = "1.0.0"
common = {path="../common"}
xmas-elf = "0.7.0"
heapless = "0.7.4"
log = { version = "0.4.11", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"